@@ -37,6 +37,7 @@ Version 2.1.1
    - Bugfix: Corrected tests for responses to IDLE and SEARCH NOT SEEN
         commands (IMAP4)
    - Cleanup of SEARCH NOT SEEN command (IMAP4)
+   - Bugfix: Segfaulting in SSL when writing to a closed socket
 
 Version 2.1.0
  * Nicolas Rougier
